-- MySQL Script generated by MySQL Workbench
-- Thu Mar 28 12:11:42 2024
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema ready2go
-- -----------------------------------------------------
DROP SCHEMA IF EXISTS `ready2go` ;

-- -----------------------------------------------------
-- Schema ready2go
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `ready2go` DEFAULT CHARACTER SET utf8 COLLATE utf8_spanish2_ci ;
USE `ready2go` ;

-- -----------------------------------------------------
-- Table `ready2go`.`user`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ready2go`.`user` ;

CREATE TABLE IF NOT EXISTS `ready2go`.`user` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `name` VARCHAR(100) NOT NULL,
  `surname` VARCHAR(150) NOT NULL,
  `url_image` VARCHAR(300) NULL,
  `email` VARCHAR(300) NOT NULL,
  `password` VARCHAR(32) NULL,
  `password_validated` TINYINT(1) NULL DEFAULT 0,
  `token` TEXT NULL,
  `refresh_token` TEXT NULL,
  `oauth_platform` VARCHAR(50) NULL,
  PRIMARY KEY (`id`),
  UNIQUE INDEX `email_UNIQUE` (`email` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `ready2go`.`friends`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ready2go`.`friends` ;

CREATE TABLE IF NOT EXISTS `ready2go`.`friends` (
  `user_id` INT NOT NULL,
  `user_id1` INT NOT NULL,
  PRIMARY KEY (`user_id`, `user_id1`),
  INDEX `fk_user_has_user_user1_idx` (`user_id1` ASC) VISIBLE,
  INDEX `fk_user_has_user_user_idx` (`user_id` ASC) VISIBLE,
  CONSTRAINT `fk_user_has_user_user`
    FOREIGN KEY (`user_id`)
    REFERENCES `ready2go`.`user` (`id`)
    ON DELETE NO ACTION
    ON UPDATE CASCADE,
  CONSTRAINT `fk_user_has_user_user1`
    FOREIGN KEY (`user_id1`)
    REFERENCES `ready2go`.`user` (`id`)
    ON DELETE NO ACTION
    ON UPDATE CASCADE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `ready2go`.`travel`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ready2go`.`travel` ;

CREATE TABLE IF NOT EXISTS `ready2go`.`travel` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `origin` VARCHAR(100) NOT NULL,
  `destination` VARCHAR(100) NOT NULL,
  `budget` DOUBLE NULL,
  `date_from` DATE NOT NULL,
  `date_to` DATE NOT NULL,
  `rating` INT NULL,
  `comments` VARCHAR(300) NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `ready2go`.`permission`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ready2go`.`permission` ;

CREATE TABLE IF NOT EXISTS `ready2go`.`permission` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `create_planning` TINYINT(1) NOT NULL,
  `delete_planning` TINYINT(1) NOT NULL,
  `add_activity` TINYINT(1) NOT NULL,
  `move_activity` TINYINT(1) NOT NULL,
  `delete_activity` TINYINT(1) NOT NULL,
  `add_image` TINYINT(1) NOT NULL,
  `remove_image` TINYINT(1) NOT NULL,
  `see_images` TINYINT(1) NOT NULL,
  `add_travelers` TINYINT(1) NOT NULL,
  `remove_travelers` TINYINT(1) NOT NULL,
  `user_id` INT NOT NULL,
  `travel_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_permission_user1_idx` (`user_id` ASC) VISIBLE,
  INDEX `fk_permission_travel1_idx` (`travel_id` ASC) VISIBLE,
  CONSTRAINT `fk_permission_user1`
    FOREIGN KEY (`user_id`)
    REFERENCES `ready2go`.`user` (`id`)
    ON DELETE CASCADE
    ON UPDATE CASCADE,
  CONSTRAINT `fk_permission_travel1`
    FOREIGN KEY (`travel_id`)
    REFERENCES `ready2go`.`travel` (`id`)
    ON DELETE CASCADE
    ON UPDATE CASCADE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `ready2go`.`tag`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ready2go`.`tag` ;

CREATE TABLE IF NOT EXISTS `ready2go`.`tag` (
  `tag_name` VARCHAR(100) NOT NULL,
  PRIMARY KEY (`tag_name`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `ready2go`.`activity`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ready2go`.`activity` ;

CREATE TABLE IF NOT EXISTS `ready2go`.`activity` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `api_id` TEXT NULL,
  `name` VARCHAR(100) NOT NULL,
  `start_date` DATE NOT NULL,
  `end_date` DATE NOT NULL,
  `time_unit` INT NULL,
  `url_image` VARCHAR(300) NULL,
  `mobile_number` VARCHAR(30) NULL,
  `price` DOUBLE NOT NULL,
  `tag` VARCHAR(100) NOT NULL,
  `travel_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_activity_tag1_idx` (`tag` ASC) VISIBLE,
  INDEX `fk_activity_travel1_idx` (`travel_id` ASC) VISIBLE,
  CONSTRAINT `fk_activity_tag1`
    FOREIGN KEY (`tag`)
    REFERENCES `ready2go`.`tag` (`tag_name`)
    ON DELETE NO ACTION
    ON UPDATE CASCADE,
  CONSTRAINT `fk_activity_travel1`
    FOREIGN KEY (`travel_id`)
    REFERENCES `ready2go`.`travel` (`id`)
    ON DELETE NO ACTION
    ON UPDATE CASCADE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `ready2go`.`preferences`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ready2go`.`preferences` ;

CREATE TABLE IF NOT EXISTS `ready2go`.`preferences` (
  `user_id` INT NOT NULL,
  `tag_tag_name` VARCHAR(100) NOT NULL,
  PRIMARY KEY (`user_id`, `tag_tag_name`),
  INDEX `fk_user_has_tag_tag1_idx` (`tag_tag_name` ASC) VISIBLE,
  INDEX `fk_user_has_tag_user1_idx` (`user_id` ASC) VISIBLE,
  CONSTRAINT `fk_user_has_tag_user1`
    FOREIGN KEY (`user_id`)
    REFERENCES `ready2go`.`user` (`id`)
    ON DELETE NO ACTION
    ON UPDATE CASCADE,
  CONSTRAINT `fk_user_has_tag_tag1`
    FOREIGN KEY (`tag_tag_name`)
    REFERENCES `ready2go`.`tag` (`tag_name`)
    ON DELETE NO ACTION
    ON UPDATE CASCADE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `ready2go`.`expense`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ready2go`.`expense` ;

CREATE TABLE IF NOT EXISTS `ready2go`.`expense` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `description` VARCHAR(100) NOT NULL,
  `user_id` INT NOT NULL,
  `travel_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_expense_user1_idx` (`user_id` ASC) VISIBLE,
  INDEX `fk_expense_travel1_idx` (`travel_id` ASC) VISIBLE,
  CONSTRAINT `fk_expense_user1`
    FOREIGN KEY (`user_id`)
    REFERENCES `ready2go`.`user` (`id`)
    ON DELETE NO ACTION
    ON UPDATE CASCADE,
  CONSTRAINT `fk_expense_travel1`
    FOREIGN KEY (`travel_id`)
    REFERENCES `ready2go`.`travel` (`id`)
    ON DELETE NO ACTION
    ON UPDATE CASCADE)
ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;

-- -----------------------------------------------------
-- Data for table `ready2go`.`user`
-- -----------------------------------------------------
START TRANSACTION;
USE `ready2go`;
INSERT INTO `ready2go`.`user` (`id`, `name`, `surname`, `url_image`, `email`, `password`, `password_validated`, `token`, `refresh_token`, `oauth_platform`) VALUES (1, 'admin', 'superadmin', 'https://i.pinimg.com/474x/dc/70/52/dc70526553bd873eb3cf675c077ffa51.jpg', 'ready2gosoftware@gmail.com', 'rootReady2Go', 1, NULL, NULL, NULL);

COMMIT;

